fixed alignment bugs on future pages

--- a/src/components/elephant/Page7/style.scss
+++ b/src/components/elephant/Page7/style.scss
@@ -1,9 +1,4 @@
 .page7 {
-    .page7ElephantBackground {
-      background-image: url(https://i.ibb.co/P5HJVm4/Positive-5.png);
-      background-repeat: no-repeat;
-      background-size: cover
-    }
   }
 
   @media screen and (max-width: 1536px) {
