--- a/src/components/polarbear/Page7/styles.scss
+++ b/src/components/polarbear/Page7/styles.scss
@@ -2,11 +2,7 @@
 
 .page7 {
 
-  .page7Background {
-    background-image: url(https://i.ibb.co/sCNDbb8/positive-Future.png);
-    background-repeat: no-repeat;
-    background-size: cover
-  }
+  
 
   .future{
     &Title {
